[package]
name = "ci_comai_idxer"
version = "0.1.0"
edition = "2021"

[dependencies]
flecs_ecs = "0.1.3"
tokio = { version = "1.40.0", features = ["time", "full"] }
serde = "1.0.210"
serde_json = "1"
reqwest = { version = "0.12.8", features = ["json"] }
rand = "0.8.5"
anyhow = "1.0.89"
tracing = "0.1.40"
thiserror = "1.0.64"
tracing-subscriber = "0.3.18"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
dotenv = "0.15.0"
neo4rs = "0.8.0"
log = "0.4.22"